@@ -1043,11 +1043,21 @@ IWebView* createWebViewAndOffscreenWindow(HWND* webViewWindow)
 
 RetainPtr<CFURLCacheRef> sharedCFURLCache()
 {
-#ifdef CFURLCacheCopySharedURLCachePresent
-    return RetainPtr<CFURLCacheRef>(AdoptCF, CFURLCacheCopySharedURLCache());
-#else
-    return CFURLCacheSharedURLCache();
-#endif
+    HMODULE module = GetModuleHandle(TEXT("CFNetwork_debug.dll"));
+    if (!module)
+        module = GetModuleHandle(TEXT("CFNetwork.dll"));
+    if (!module)
+        return 0;
+
+    typedef CFURLCacheRef (*CFURLCacheCopySharedURLCacheProcPtr)(void);
+    if (CFURLCacheCopySharedURLCacheProcPtr copyCache = reinterpret_cast<CFURLCacheCopySharedURLCacheProcPtr>(GetProcAddress(module, "CFURLCacheCopySharedURLCache")))
+        return RetainPtr<CFURLCacheRef>(AdoptCF, copyCache());
+
+    typedef CFURLCacheRef (*CFURLCacheSharedURLCacheProcPtr)(void);
+    if (CFURLCacheSharedURLCacheProcPtr sharedCache = reinterpret_cast<CFURLCacheSharedURLCacheProcPtr>(GetProcAddress(module, "CFURLCacheSharedURLCache")))
+        return sharedCache();
+
+    return 0;
 }
 
 int main(int argc, char* argv[])
